--- a/index.html
+++ b/index.html
@@ -144,7 +144,10 @@
                         <img src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg"
                             alt="">
                         <div class="top_article_info">
-                            <div>좋아요 100개</div>
+                            <div class="article_like_info">
+                                <div>좋아요 99999개</div>
+                                <div>댓글 99999개</div>
+                              </div>
                             <div>
                                 <img src="https://cdn.pixabay.com/photo/2017/02/20/18/03/cat-2083492__340.jpg" alt="">
                                 <div class="top_article_user_name">강아지 사육사</div>
@@ -162,7 +165,10 @@
                     <div class="top_article_list">
                         <img src="https://cdn.pixabay.com/photo/2019/11/07/08/40/puppy-4608266__340.jpg" alt="">
                         <div class="top_article_info">
-                            <div>좋아요 100개</div>
+                            <div class="article_like_info">
+                                <div>좋아요 99999개</div>
+                                <div>댓글 99999개</div>
+                              </div>
                             <div>
                                 <img src="https://cdn.pixabay.com/photo/2017/02/20/18/03/cat-2083492__340.jpg" alt="">
                                 <div class="top_article_user_name">강아지 사육사</div>
@@ -180,7 +186,10 @@
                     <div class="top_article_list">
                         <img src="https://cdn.pixabay.com/photo/2017/02/20/18/03/cat-2083492__340.jpg" alt="">
                         <div class="top_article_info">
-                            <div>좋아요 100개</div>
+                            <div class="article_like_info">
+                                <div>좋아요 99999개</div>
+                                <div>댓글 99999개</div>
+                              </div>
                             <div>
                                 <img src="https://cdn.pixabay.com/photo/2017/02/20/18/03/cat-2083492__340.jpg" alt="">
                                 <div class="top_article_user_name">강아지 사육사</div>
@@ -198,7 +207,10 @@
                     <div class="top_article_list">
                         <img src="https://cdn.pixabay.com/photo/2014/04/13/20/49/cat-323262__340.jpg" alt="">
                         <div class="top_article_info">
-                            <div>좋아요 100개</div>
+                            <div class="article_like_info">
+                                <div>좋아요 99999개</div>
+                                <div>댓글 99999개</div>
+                              </div>
                             <div>
                                 <img src="https://cdn.pixabay.com/photo/2017/02/20/18/03/cat-2083492__340.jpg" alt="">
                                 <div class="top_article_user_name">강아지 사육사</div>
@@ -218,7 +230,10 @@
                         <img src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg"
                             alt="">
                         <div class="top_article_info">
-                            <div>좋아요 100개</div>
+                            <div class="article_like_info">
+                                <div>좋아요 99999개</div>
+                                <div>댓글 99999개</div>
+                              </div>
                             <div>
                                 <img src="https://cdn.pixabay.com/photo/2017/02/20/18/03/cat-2083492__340.jpg" alt="">
                                 <div class="top_article_user_name">강아지 사육사</div>
