fix 회원가입 필수항목 경고창

--- a/signup.html
+++ b/signup.html
@@ -48,9 +48,9 @@
                 <label for="gender" style="justify-content: center;display: flex; margin-bottom: 5px; font-weight: bold;">성별</label>
                 
                 <div style="width:100%; height: 20px;">
-                    <input type="radio" id="man" name="gender" value="1" checked>
+                    <input type="radio" id="man" name="gender" value="1">
                     <label for="man">남성</label>
-                    <input type="radio" id="woman" name="gender" value="2" checked>
+                    <input type="radio" id="woman" name="gender" value="2">
                     <label for="woman">여성</label>
                 </div>
                     
