fix 로그인 경고창, 로그인 css,html

--- a/signup.html
+++ b/signup.html
@@ -15,6 +15,7 @@
 <body>
     <div class="wrapper">
         <div class="login-box">
+            <img src="https://i.pinimg.com/originals/44/0d/0f/440d0ff9b84e420171a99603a697e804.gif" alt="" class="login_box_img">
             <div>
                 <h1 style="margin-top: 30px;">Petrasche</h1>
             </div>
