--- a/login.html
+++ b/login.html
@@ -15,6 +15,7 @@
 <body>
     <div class="wrapper">
         <div class="login-box">
+            <img src="https://media0.giphy.com/media/HsqYTckRJybb4b9493/giphy.gif?cid=6c09b952u1mz4sjyu3bm5eujmebwd56dht24nm8oovg8ctxx&rid=giphy.gif&ct=s" alt="" class="login_box_img">
             <div>
                 <h1>Petrasche</h1>
             </div>
@@ -32,7 +33,6 @@
             <div>
                 <a href="/signup.html">계정이 없으신가요? 회원가입</a>
             </div>
-
 
 
         </div>
