fix 로그인 박스 상단 이미지

--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
 <body>
     <div class="wrapper">
         <div class="login-box">
-            <img src="https://media0.giphy.com/media/HsqYTckRJybb4b9493/giphy.gif?cid=6c09b952u1mz4sjyu3bm5eujmebwd56dht24nm8oovg8ctxx&rid=giphy.gif&ct=s" alt="" class="login_box_img">
+            <img src="https://img.banbbom.com/emoticon/3530448312_bYn8jUwG_1e5eaabce910790dd46d0bc21860acace8ea6464.gif" alt="" class="login_box_img">
             <div>
                 <h1>Petrasche</h1>
             </div>
