fix 로딩이미지 수정

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
     <div id="now_loading" class="load_img">
-        <img src="static\load_img\icon-1s-351px.gif" alt="" srcset="">
+        <img src="https://i.pinimg.com/originals/b5/9e/c4/b59ec4cdd3e542541ec5c5234b92a9b6.gif" alt="" srcset="">
     </div>
     <div id="modal_edit_box" class="modal_edit_box">
         <div class="modal_edit_box_input"><textarea id="modal_edit_text" rows="5" cols="50"
