refactoring: 개인페이지 탭이동 형식 변경

--- a/mypage.html
+++ b/mypage.html
@@ -60,15 +60,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="user_button_box">
-                    <div class="menu_change_button_box">
-                        <button id="menu_change_button" class="menu_change_button" type="button" onclick="changeButton()">
-                            프로필 변경
-                        </button>
-                    </div>
+                <div id="user_button_box" class="user_button_box">
+                    
                 </div>
             </div>
-            <div class="show_container">
+            <div id="show_container" class="show_container">
                 <div id="show_box" class="show_box">
                     <!-- 내 전체 게시물 메뉴 -->
                     <div id ="article_box_wrapper">
@@ -88,22 +84,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="pet_select_box" class="pet_select_box">
-                    <div class="pet_botton_box">
-                        <div class="pet_button">
-                            김덕구
-                        </div>
-                    </div>
-                    <div class="pet_botton_box">
-                        <div class="pet_button">
-                            박영희
-                        </div>
-                    </div>
-                    <div class="pet_botton_box">
-                        <div class="pet_button">
-                            이창수
-                        </div>
-                    </div>
+                <div id="pet_select_box" class="pet_select_box">  
                 </div>
             </div>
         </div>
