add 팔로우 기능 추가

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                 <div class="modal_user_profile">
                     <img src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg" alt=""
                         srcset="">
-                    <div id="modal_username">강아지 사육사</div>
+                    <div id="modal_username" class="modal_username">강아지 사육사</div>
+                    <div id="modal_follow" class="follow">팔로우</div>
                 </div>
                 <div id="modal_content_list" class="modal_content_list">
                     <div id="modal_content_text">
