--- a/login.html
+++ b/login.html
@@ -9,7 +9,9 @@
     <!------CSS---------->
     <link rel="stylesheet" type="text/css" href="./static/css/login.css">
     <!------JS---------->
+
     <script src="./static/js/api.js"></script>
+
 
 </head>
 <body>
@@ -25,11 +27,16 @@
             <div style="width:100%; height: 25px"></div>
             <div class="login-inner">
                 <input type="password" class="form-control" placeholder="password" name="password" id='password'  required />
+                
+            </div>
+            <div class="login-inner">
+                <a href="javascript:kakaoLogin();"><img style="width:253px" src="https://www.gb.go.kr/Main/Images/ko/member/certi_kakao_login.png"></a>
             </div>
             <div style="width:100%; height: 100px"></div>
             <div class="login-inner">
                 <button class="login-button" type="button" onclick="handleLogin()">로그인</button>
             </div>
+            
             <div>
                 <a href="/signup.html">계정이 없으신가요? 회원가입</a>
             </div>
@@ -38,7 +45,7 @@
         </div>
 
     </div>
-    <script>            
-    </script>    
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>  
+    <script src="./static/js/kakao.js"></script>  
 </body>
 </html>
