--- a/signup.html
+++ b/signup.html
@@ -35,7 +35,9 @@
                 <div style="width:100%; height: 20px"></div>
                 <div class="login-inner">
                     <input type="password" class="form-control" placeholder="password2" name="password2" id='password2'  required />
-                </div><a href="javascript:kakaoLogin();"><img style="width:250px" src="https://www.gb.go.kr/Main/Images/ko/member/certi_kakao_login.png"></a>
+                </div>
+                <div style="width:100%; height: 20px"></div>
+                <a href="javascript:kakaoLogin();"><img style="width:250px" src="https://www.gb.go.kr/Main/Images/ko/member/certi_kakao_login.png"></a>
                 <div style="width:100%; height: 50px">1/2</div>
 
             </div>
@@ -55,14 +57,12 @@
                     <input type="radio" id="woman" name="gender" value="2">
                     <label for="woman">여성</label>
                 </div>
-                    
                 <div style="width:100%; height: 20px"></div>
                 <div style="justify-content: center;display: flex;">
                     <label for="공개 여부">공개 여부</label>
                     <input id="is_active" type="checkbox" name="공개여부" checked="true" value="true">
                     <input id="is_active_hidden" type="hidden" name="공개여부" value="false"> 
                 </div>
-                
                 <div style="width:100%; height: 50px">2/2</div>
             </div>
 
