feat: PetProfile 등록 기능 구현

--- a/mypage.html
+++ b/mypage.html
@@ -110,20 +110,20 @@
                 <div class="add_pet_profile_box_r">
                     <div class="add_pet_profile_item">
                         <p>종류</p>
-                        <input type="radio" id="pet_dog" name="pet" value=1>
+                        <input type="radio" id="pet_dog" name="pet_type" value=1>
                         <label for="강아지">강아지</label>
-                        <input type="radio" id="pet_cat" name="pet" value=2>
+                        <input type="radio" id="pet_cat" name="pet_type" value=2>
                         <label for="고양이">고양이</label>
-                        <input type="radio" id="pet_etc" name="pet" value=3>
+                        <input type="radio" id="pet_etc" name="pet_type" value=3>
                         <label for="그외">그외</label>
                     </div>
                     <div class="add_pet_profile_item">
                         <p>크기</p>
-                        <input type="radio" id="size_small" name="size" value=1>
+                        <input type="radio" id="size_small" name="pet_size" value=1>
                         <label for="소형">소형</label>
-                        <input type="radio" id="pet_medium" name="size" value=2>
+                        <input type="radio" id="pet_medium" name="pet_size" value=2>
                         <label for="중형">중형</label>
-                        <input type="radio" id="pet_large" name="size" value=3>
+                        <input type="radio" id="pet_large" name="pet_size" value=3>
                         <label for="대형">대형</label>
                     </div>
                     <div class="add_pet_profile_item">
