--- a/signup.html
+++ b/signup.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup | Petrasche</title>
 
-    <!------CSS1---------->
+    <!------CSS---------->
     <link rel="stylesheet" type="text/css" href="./static/css/login.css">
     <!------JS---------->
     <script src="./static/js/api.js"></script>
