feat: PetProfile 이미지 삽입

--- a/mypage.html
+++ b/mypage.html
@@ -48,9 +48,8 @@
                         <div class="user_img_box">
                             <img id="user_profile_img" src="https://photo.jtbc.joins.com/news/jam_photo/202109/24/1cafd5d0-6a05-4c52-a0fb-e4079839650c.jpg">
                         </div>
-                        <div class="user_id_box">
-                            <span class="user_id" id="user_id">
-                                
+                        <div class="username_box">
+                            <span class="username" id="username">   
                             </span>
                         </div>
                     </div>
@@ -61,7 +60,6 @@
                     </div>
                 </div>
                 <div id="user_button_box" class="user_button_box">
-                    
                 </div>
             </div>
             <div id="show_container" class="show_container">
