--- a/dm.html
+++ b/dm.html
@@ -13,6 +13,9 @@
 
 <body>
     <h1>Lets chat!</h1>
+    <div>
+        asdsasdasd
+    </div>
 
     <form id="form">
         <input type="text" name="message" />
