add api 채팅방 불러오기

--- a/dm.html
+++ b/dm.html
@@ -23,6 +23,7 @@
     <div id="messages"></div>
 
     <script src="/static/js/dm.js"></script>
+    <script src="/static/js/api.js"></script>
 </body>
 
 </html>
