줄바꿈...변동사항없습니다..

--- a/dm.html
+++ b/dm.html
@@ -1,5 +1,3 @@
-# index.html
-
 <!DOCTYPE html>
 <html>
 
@@ -12,15 +10,21 @@
 </head>
 
 <body>
-    <h1>Lets chat!</h1>
     <div>
-        asdsasdasd
+        asd
+    </div>
+    <div>
+        <h1>Lets chat!</h1>
+        <div>
+
+        </div>
+
+        <form id="form">
+            <input type="text" name="message" />
+        </form>
+        <div id="messages"></div>
     </div>
 
-    <form id="form">
-        <input type="text" name="message" />
-    </form>
-    <div id="messages"></div>
 
     <script src="/static/js/dm.js"></script>
     <script src="/static/js/api.js"></script>
