--- a/index.html
+++ b/index.html
@@ -81,15 +81,16 @@
         </div>
         <div id="upload_model_content" class="upload_model_content">
             <textarea id="upload_content" cols="30" rows="10" placeholder="내용작성"></textarea>
-                <h4 id="pet_profile_title" style="color: black; background:yellow; padding: 5px; border-radius: 5px;">펫 프로필 선택</h4>
-                <div id="pet_profile_select" class="pet_profile_select">
-                    <!-- <input type="radio" name="pet_profile" id="pet_profile1" value="강아지1">
+            <h4 id="pet_profile_title" style="color: black; background:yellow; padding: 5px; border-radius: 5px;">펫 프로필
+                선택</h4>
+            <div id="pet_profile_select" class="pet_profile_select">
+                <!-- <input type="radio" name="pet_profile" id="pet_profile1" value="강아지1">
                     <label for="pet_profile1">
                         <div><i class="fa-solid fa-circle-check"></i></div>
                         <p class="pet_name">강아지1<p>
                         <img src="http://cdn.ksilbo.co.kr/news/photo/202206/938335_532280_3749.jpg" alt="" srcset="">
                     </label> -->
-                </div>    
+            </div>
         </div>
     </div>
 
