--- a/mypage.html
+++ b/mypage.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="./static/css/mypage.css">
 
 
-
+    <script src="https://kit.fontawesome.com/0e01622099.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang&display=swap" rel="stylesheet">
     <script src="https://use.fortawesome.com/99966411.js"></script>
     <style>
@@ -140,17 +140,24 @@
             </div>
         </div>
     </div>
+    
 
     <!-- 상세 모달 -->
-    <!-- <div id="modal_box" class="modal_box">
+    <div id="modal_box" class="modal_box">
         <div class="modal_content">
             <img id="modal_box_img" src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg"
                 alt="">
+            <div id="like_user_list" class="like_user_list">
+                <h4>좋아요 없음</h4>
+            </div>
             <div id="modal_desc" class="modal_desc">
+                <div id="article_delete" class="article_delete"><i class="fa-solid fa-trash"></i></div>
+                <div id="article_edit" class="article_edit"><i class="fa-solid fa-pen-to-square"></i></div>
                 <div class="modal_user_profile">
                     <img src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg" alt=""
                         srcset="">
                     <div id="author">강아지 사육사</div>
+                    <div id="modal_follow" class="follow" onclick="Follow(user,article)">팔로우</div>
                 </div>
                 <div id="modal_content_list" class="modal_content_list">
                     <div id="content">
@@ -164,9 +171,19 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
-    <div id="modal_box" class="modal_box" style="display:flex">
+    <!--------edit------------>
+    <div id="modal_edit_box" class="modal_edit_box">
+        왜 이거 안보임??
+        <div class="modal_edit_box_input"><textarea id="modal_edit_text" rows="5" cols="50"
+                placeholder="내용....."></textarea>
+            <button id="modal_edit_button" class="modal_edit_button">수정</button>
+            <button onclick="modal_edit_cancel()" id="modal_edit_cancel" class="modal_edit_cancel">취소</button>
+        </div>
+    </div>
+
+    <!-- <div id="modal_box" class="modal_box" style="display:flex">
         <div class="modal_content">
             <div class="modal_img_box">
                 <img id="modal_box_img"
@@ -201,7 +218,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!------JS---------->
     <script src="./static/js/api.js"></script>
     <script src="./static/js/mypage.js"></script>
