--- a/mypage.html
+++ b/mypage.html
@@ -89,7 +89,7 @@
     </div>
 
     <!-- 반려동물 등록 모달 -->
-    <div id="add_pet_modal_box" class="add_pet_modal_box1">
+    <div id="add_pet_modal_box" class="add_pet_modal_box">
         <div class="add_pet_modal_content">
             <div class="add_pet_profile_box">
                 <div class="add_pet_profile_box_l">
