add article 삭제 기능 디테일모달에 연동

--- a/mypage.html
+++ b/mypage.html
@@ -142,7 +142,7 @@
     </div>
     
 
-    <!-- 상세 모달 -->
+    <!-- 디테일 모달 -->
     <div id="modal_box" class="modal_box">
         <div class="modal_content">
             <img id="modal_box_img" src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg"
@@ -151,8 +151,8 @@
                 <h4>좋아요 없음</h4>
             </div>
             <div id="modal_desc" class="modal_desc">
-                <div id="article_delete" class="article_delete"><i class="fa-solid fa-trash"></i></div>
-                <div id="article_edit" class="article_edit"><i class="fa-solid fa-pen-to-square"></i></div>
+                <div id="article_delete" class="article_delete" onclick="articleDelete()"><i class="fa-solid fa-trash"></i></div>
+                <div id="article_edit" class="article_edit" onclick="articleEdit()"><i class="fa-solid fa-pen-to-square"></i></div>
                 <div class="modal_user_profile">
                     <img src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg" alt=""
                         srcset="">
