--- a/mypage.html
+++ b/mypage.html
@@ -145,11 +145,19 @@
     <!-- 디테일 모달 -->
     <div id="modal_box" class="modal_box">
         <div class="modal_content">
-            <img id="modal_box_img" src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg"
-                alt="">
-            <div id="like_user_list" class="like_user_list">
-                <h4>좋아요 없음</h4>
+            <div class="modal_img_box" style="width:220%">
+                <img id="modal_box_img" src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg"
+                alt="" style="width: 100%;">
+                <div id="slide_left" class="slide_left"><i class="fa-solid fa-caret-left"></i></div>
+                <div id="slide_right" class="slide_right"><i class="fa-solid fa-caret-right"></i></div>
+                <div id="like_user_list" class="like_user_list">
+                    <h4>좋아요 없음</h4>
+                </div>
             </div>
+            <div id="like_icon_on" class="like_icon_on"><i class="fa-solid fa-heart"></i><span> 45</span></div>
+            <div id="like_icon_off" class="like_icon_off"><i class="fa-regular fa-heart"></i><span> 45</span></div>
+            <div id="heart_ani" class="heart_ani"><i class="fa-solid fa-heart"></i></div>
+
             <div id="modal_desc" class="modal_desc">
                 <div id="article_delete" class="article_delete" onclick="articleDelete()"><i class="fa-solid fa-trash"></i></div>
                 <div id="article_edit" class="article_edit" onclick="articleEdit()"><i class="fa-solid fa-pen-to-square"></i></div>
