add 펫프로필별 게시물 div 박스 생성

--- a/mypage.html
+++ b/mypage.html
@@ -82,6 +82,13 @@
                         <div id="user_profile_section" class="user_profile_section">
                         </div>
                     </div>
+
+                    <!-- 펫프로필 별 게시물 메뉴 -->
+                    <div id="pet_article_box_wrapper">
+                        <div id="pet_article_box" class="article_box">
+                        </div>
+                    </div>
+
                 </div>
                 <div id="pet_select_box" class="pet_select_box">
                 </div>
