feat: 회원 비밀번호 변경 기능 추가

--- a/mypage.html
+++ b/mypage.html
@@ -88,6 +88,23 @@
             </div>
         </div>
     </div>
+    
+    <!-- 비밀번호 변경 모달 -->
+    <div id="update_pw_modal_box" class="update_pw_modal_box">
+        <div class="update_pw_modal_content">
+            <div class="update_pw_msg_box">
+                <p>현재 비밀번호를 입력해주세요</p>
+            </div>
+            <div class="update_pw_input_box">
+                <input id="update_pw_input" type="password" />
+            </div>
+            <div class="update_pw_button_box">
+                <button type="button" onclick="postAuthPassword()">
+                    인증
+                </button>
+            </div>
+        </div>
+    </div>
 
     <!-- 반려동물 등록 모달 -->
     <div id="add_pet_modal_box" class="add_pet_modal_box">
