--- a/dm.html
+++ b/dm.html
@@ -16,6 +16,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/0e01622099.js" crossorigin="anonymous"></script>
     <script src="https://use.fortawesome.com/99966411.js"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/reconnecting-websocket/1.0.0/reconnecting-websocket.js"></script>
 
 
 
@@ -98,9 +100,13 @@
                         <div id="chat_box" class="chat_box" style="display:flex">
                         </div>
                     </div>
+                    <div class="chat_input_box">
+                        <form id="form">
+                            <input type="text" name="message" />
+                        </form>
+                    </div>
                 </div>
             </div>
-
         </div>
     </div>
 
