--- a/mypage.html
+++ b/mypage.html
@@ -22,7 +22,7 @@
 <body>
     <div class="wrapper">
         <div class="left_menu">
-            <div class="menu_dog" id="menu_like" onclick="loadMyArticle()">
+            <div class="menu_dog" id="menu_like" onclick="loadMyArticle(1)">
                 <img src="https://cdn-icons-png.flaticon.com/512/2754/2754652.png" alt="">
                 나의 글
             </div>
