--- a/search_result.html
+++ b/search_result.html
@@ -157,7 +157,7 @@
                 </div>
             </div>
         </div>
-        <script src="/static/js/main_api.js"></script>
+        <script src="/static/js/search_result.js"></script>
         <script src="/static/js/main_script.js"></script>
 </body>
 
