--- a/mypage.html
+++ b/mypage.html
@@ -197,7 +197,7 @@
                     <h4>좋아요 없음</h4>
                 </div>
             </div>
-            <div id="like_icon_on" class="like_icon_on"><i class="fa-solid fa-heart"></i><span> 45</span></div>
+            <div id="like_icon_on" class="like_icon_on" style="display:flex"><i class="fa-solid fa-heart"></i><span> 45</span></div>
             <div id="like_icon_off" class="like_icon_off"><i class="fa-regular fa-heart"></i><span> 45</span></div>
             <div id="heart_ani" class="heart_ani"><i class="fa-solid fa-heart"></i></div>
 
