채팅방 목록 불러오기 (프로필이미지 진행중)

--- a/dm.html
+++ b/dm.html
@@ -25,52 +25,17 @@
     <div class="wrapper">
         <!-- 유저가 보유한 채팅방(header) 리스트 -->
 
-        <div class="header_list">
-
-            <div class="header" id="">
+        <div class="header_list" id="header_list">
+            <!-- <div class="header" id="">
                 <div class="header_user_profile_img">
                     <img id="user_profile_img"
                         src="https://photo.jtbc.joins.com/news/jam_photo/202109/24/1cafd5d0-6a05-4c52-a0fb-e4079839650c.jpg">
                 </div>
                 <div class="header_user_profile">
-                    <div class="username">Username</div>
-                    <div class="last_message">안녕하세요~안녕하세요~</div>
+                    <div class="username" id="username">Username</div>
+                    <div class="last_message" id="last_message">안녕하세요~안녕하세요~</div>
                 </div>
-            </div>
-
-            <div class="header" id="">
-                <div class="header_user_profile_img">
-                    <img id="user_profile_img"
-                        src="https://photo.jtbc.joins.com/news/jam_photo/202109/24/1cafd5d0-6a05-4c52-a0fb-e4079839650c.jpg">
-                </div>
-                <div class="header_user_profile">
-                    <div class="username">Username</div>
-                    <div class="last_message">안녕하세요~안녕하세요~</div>
-                </div>
-            </div>
-
-            <div class="header" id="">
-                <div class="header_user_profile_img">
-                    <img id="user_profile_img"
-                        src="https://photo.jtbc.joins.com/news/jam_photo/202109/24/1cafd5d0-6a05-4c52-a0fb-e4079839650c.jpg">
-                </div>
-                <div class="header_user_profile">
-                    <div class="username">Username</div>
-                    <div class="last_message">안녕하세요~안녕하세요~</div>
-                </div>
-            </div>
-
-            <div class="header" id="">
-                <div class="header_user_profile_img">
-                    <img id="user_profile_img"
-                        src="https://photo.jtbc.joins.com/news/jam_photo/202109/24/1cafd5d0-6a05-4c52-a0fb-e4079839650c.jpg">
-                </div>
-                <div class="header_user_profile">
-                    <div class="username">Username</div>
-                    <div class="last_message">안녕하세요~안녕하세요~</div>
-                </div>
-            </div>
-
+            </div> -->
         </div>
 
         <!-- 채팅방 이너  -->
