--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
         <img src="https://i.pinimg.com/originals/b5/9e/c4/b59ec4cdd3e542541ec5c5234b92a9b6.gif" alt="" srcset="">
     </div>
     <div id="now_loading_page" class="load_img">
-        <img src="https://media4.giphy.com/media/nMoMxQG2uJsGTBsjsO/giphy.gif?cid=6c09b9522kmc1si0rh34bk2aps7wu7lwtgy3ie6iwe7pyxxt&rid=giphy.gif&ct=s" alt="" srcset="">
+        <img src="https://media4.giphy.com/media/nMoMxQG2uJsGTBsjsO/giphy.gif?cid=6c09b9522kmc1si0rh34bk2aps7wu7lwtgy3ie6iwe7pyxxt&rid=giphy.gif&ct=s"
+            alt="" srcset="">
+    </div>
+    <div id="login_modal_box" class="login_modal_box">
+            <div class="login_box">
+            <h1>Petrasche</h1>
+            <input id="email" type="text" placeholder="이메일">
+            <input id="password" type="password" placeholder="패스워드">
+            <div onclick="handleLogin()" class="login_btn"><button>로그인</button></div>
+            <div onclick="kakaoLogin()" class="kakao_login">카카오 로그인</div>
+            <a href="/signup.html">계정이 없으신가요? 회원가입</a>
+        </div>
     </div>
     <div id="modal_edit_box" class="modal_edit_box">
         <div class="modal_edit_box_input"><textarea id="modal_edit_text" rows="5" cols="50"
@@ -116,7 +127,7 @@
                 <div onclick="alarm(this)" id="alarm" class="alarm">
                     <i class="fa-solid fa-bell"></i>
                     <div class="history">
-                        
+
                     </div>
                 </div>
                 <div class="user">
@@ -162,6 +173,8 @@
         </div>
         <script src="/static/js/main_api.js"></script>
         <script src="/static/js/main_script.js"></script>
+        <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>  
+        <script src="./static/js/kakao.js"></script>
 </body>
 
 </html>
