--- a/dm.html
+++ b/dm.html
@@ -61,20 +61,29 @@
                 <div id="show_box" class="show_box">
                     <div id="chat_box_wrapper">
                         <div id="chat_box" class="chat_box" style="display:flex">
+                            <div id="messages" class="my_messages">
+                                <div style="padding: 10px;">
+                                    <div class="my" id="my">
+                                        나의alskdjaasdasda;ldkw;lkda;sdk;asldkas;dkwl;akjdskajdlasdasdkasdas;dlakasdasdjs;asdas;dlkasdldkslasdssjdl
+                                    </div>
+                                    <div class="others">
+                                        나의 채팅 나의 채팅 나의 asdasdasdasdasdas췌asdasd팅
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="messages" class="your_messages">
+                            </div>
                         </div>
-                    </div>
-                    <div class="chat_input_box" id="input-message">
-                        <!-- <form id="form" onsubmit="sendMessage(this)">
-                            <input type="text" name="message" id="message" />
-                        </form> -->
-                        <form id="form">
-                            <input type="text" name="message" />
-                        </form>
-                        <div id="messages"></div>
+                        <div class="chat_input_box" id="input-message">
+                            <form id="form" class="sendbox">
+                                <input class="sendbox_inner" type="text" name="message" placeholder="메세지 입력...">
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
 
