--- a/mypage.html
+++ b/mypage.html
@@ -205,9 +205,8 @@
                 <div id="article_delete" class="article_delete" onclick="articleDelete()"><i class="fa-solid fa-trash"></i></div>
                 <div id="article_edit" class="article_edit" onclick="articleEdit()"><i class="fa-solid fa-pen-to-square"></i></div>
                 <div class="modal_user_profile">
-                    <img src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg" alt=""
-                        srcset="">
-                    <div id="author">강아지 사육사</div>
+                    <img id="author_profile_img" src="" alt="" srcset="">
+                    <div id="author">유저</div>
                     <div id="modal_follow" class="follow" onclick="Follow(user,article)">팔로우</div>
                 </div>
                 <div id="modal_content_list" class="modal_content_list">
