--- a/index.html
+++ b/index.html
@@ -171,10 +171,13 @@
                 </div>
             </div>
         </div>
+        <script src="/static/js/hashtag.js"></script>
         <script src="/static/js/main_api.js"></script>
         <script src="/static/js/main_script.js"></script>
         <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>  
         <script src="./static/js/kakao.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.min.js"></script>
+
 </body>
 
 </html>
