--- a/search_result.html
+++ b/search_result.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/main_style.css">
+    <link rel="stylesheet" href="/static/css/hashtag.css">
     <script src="https://kit.fontawesome.com/0e01622099.js" crossorigin="anonymous"></script>
-    <title>Main Page</title>
+    <title>검색 결과|Petrasche</title>
 </head>
 
 <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
@@ -146,7 +147,7 @@
                 </div>
             </div>
             <div class="right_section">
-                <h1 class="top_title">Best 게시물</h1>
+                <h1 class="top_title">검색 결과</h1>
                 <div id="top_article" class="top_article">
                 </div>
                 <div class="scroll_button">
@@ -157,6 +158,7 @@
                 </div>
             </div>
         </div>
+        <script src="/static/js/hashtag.js"></script>
         <script src="/static/js/search_result.js"></script>
         <script src="/static/js/main_script.js"></script>
 </body>
