feat 메시지 불러오기 작업중

--- a/dm.html
+++ b/dm.html
@@ -61,17 +61,19 @@
                 <div id="show_box" class="show_box">
                     <div id="chat_box_wrapper">
                         <div id="chat_box" class="chat_box" style="display:flex">
-                            <div id="messages" class="my_messages">
+                            <div id="my_message" class="my_messages">
                                 <div style="padding: 10px;">
                                     <div class="my" id="my">
                                         나의alskdjaasdasda;ldkw;lkda;sdk;asldkas;dkwl;akjdskajdlasdasdkasdas;dlakasdasdjs;asdas;dlkasdldkslasdssjdl
                                     </div>
-                                    <div class="others">
-                                        나의 채팅 나의 채팅 나의 asdasdasdasdasdas췌asdasd팅
-                                    </div>
                                 </div>
                             </div>
-                            <div id="messages" class="your_messages">
+                            <div id="other_message" class="my_messages">
+                                <div style="padding: 10px;">
+                                    <div class="others" id="others">
+                                        상대 채팅 asdasdasdasdasdas췌asdasd팅
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="chat_input_box" id="input-message">
