enhancement - urls.py에 url들 모아놓고 나머지 js에서는 삭제.

--- a/dm.html
+++ b/dm.html
@@ -87,7 +87,7 @@
     </div>
 
 
-
+    <script src="./static/js/urls.js"></script>
     <script src="/static/js/dm.js"></script>
     <!-- <script src="/static/js/api.js"></script> -->
 
