--- a/mypage.html
+++ b/mypage.html
@@ -262,6 +262,7 @@
 
 
     <!------JS---------->
+    <script src="./static/js/urls.js"></script>
     <script src="./static/js/api.js"></script>
     <script src="./static/js/hashtag.js"></script>
     <script src="./static/js/mypage.js"></script>
