--- a/neighbor.html
+++ b/neighbor.html
@@ -313,6 +313,7 @@
                 </div>
             </div>
         </div>
+        <script src="./static/js/urls.js"></script>
         <!-- <script src="/static/js/main_api.js"></script> -->
         <script src="/static/js/main_script.js"></script>
         <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>  
