--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
                 </div>
             </div>
         </div>
+        <script src="./static/js/urls.js"></script>
         <script src="/static/js/hashtag.js"></script>
         <script src="/static/js/main_api.js"></script>
         <script src="/static/js/main_script.js"></script>
