--- a/login.html
+++ b/login.html
@@ -42,6 +42,7 @@
             </div>
         </div>
     </div>
+    <script src="./static/js/urls.js"></script>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>  
     <script src="./static/js/kakao.js"></script>
 </body>
