--- a/neighbor-detail.html
+++ b/neighbor-detail.html
@@ -134,6 +134,7 @@
                 </div>
             </div>
 
+        <script src="./static/js/urls.js"></script>
         <script src="/static/js/main_api.js"></script>
         <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>  
         <script src="./static/js/kakao.js"></script>
