--- a/search_result.html
+++ b/search_result.html
@@ -86,12 +86,6 @@
             <h4 id="pet_profile_title" style="color: black; background:yellow; padding: 5px; border-radius: 5px;">펫 프로필
                 선택</h4>
             <div id="pet_profile_select" class="pet_profile_select">
-                <!-- <input type="radio" name="pet_profile" id="pet_profile1" value="강아지1">
-                    <label for="pet_profile1">
-                        <div><i class="fa-solid fa-circle-check"></i></div>
-                        <p class="pet_name">강아지1<p>
-                        <img src="http://cdn.ksilbo.co.kr/news/photo/202206/938335_532280_3749.jpg" alt="" srcset="">
-                    </label> -->
             </div>
         </div>
     </div>
@@ -154,10 +148,9 @@
                     <div onclick="top_left_scroll()"><i class="fa-solid fa-angle-left"></i></div>
                     <div onclick="top_right_scroll()"><i class="fa-solid fa-angle-right"></i></div>
                 </div>
-                <div id="main_article_list" class="main_article_list">
-                </div>
             </div>
         </div>
+        <script src="./static/js/urls.js"></script>
         <script src="/static/js/hashtag.js"></script>
         <script src="/static/js/search_result.js"></script>
         <script src="/static/js/main_script.js"></script>
