--- a/signup.html
+++ b/signup.html
@@ -128,6 +128,7 @@
                 document.getElementById('signup').style.display = "flex"
             }
         </script>
+        <script src="./static/js/urls.js"></script>
         <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
         <script src="./static/js/kakao.js"></script>
         <script src="./static/js/signup.js"></script>
