--- a/dm.html
+++ b/dm.html
@@ -60,22 +60,16 @@
             <div id="show_container" class="show_container">
                 <div id="show_box" class="show_box">
                     <div id="chat_box_wrapper">
+
                         <div id="chat_box" class="chat_box" style="display:flex">
-                            <div id="my_message" class="my_messages">
-                                <div style="padding: 10px;">
-                                    <div class="my" id="my">
-                                        나의alskdjaasdasda;ldkw;lkda;sdk;asldkas;dkwl;akjdskajdlasdasdkasdas;dlakasdasdjs;asdas;dlkasdldkslasdssjdl
-                                    </div>
-                                </div>
+                            <div id="messages" class="messages">
+
                             </div>
-                            <div id="other_message" class="my_messages">
-                                <div style="padding: 10px;">
-                                    <div class="others" id="others">
-                                        상대 채팅 asdasdasdasdasdas췌asdasd팅
-                                    </div>
-                                </div>
+                            <div id="messages" class="messages">
+
                             </div>
                         </div>
+
                         <div class="chat_input_box" id="input-message">
                             <form id="form" class="sendbox">
                                 <input class="sendbox_inner" type="text" name="message" placeholder="메세지 입력...">
@@ -91,21 +85,7 @@
 
 
     <script src="/static/js/dm.js"></script>
-    <!-- <script src="/static/js/api.js"></script> -->
 
 </body>
 
 </html>
-
-
-<!-- <div class="message-list">
-    <h1>Lets chat!</h1>
-    <div>
-
-    </div>
-
-    <form id="form">
-        <input type="text" name="message" />
-    </form>
-
-</div> -->
