--- a/walk-detail.html
+++ b/walk-detail.html
@@ -134,15 +134,11 @@
                 </div>
             </div>
 
-        <script src="/static/js/main_api.js"></script>
+        <!-- <script src="/static/js/main_api.js"></script> -->
         <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>  
         <script src="./static/js/kakao.js"></script>
-        <script>
-
-
-
-
-        </script>
+        <script src="./static/js/walk.js"></script>
+        <script src="./static/js/api.js"></script>
 </body>
 
 
