--- a/walk.html
+++ b/walk.html
@@ -185,7 +185,7 @@
                             <div>
                                 <h3>산책가기</h3>
                             </div>
-                            <div class="m_submit_button" >등록</div>
+                            <div class="m_submit_button" onclick="submitWalkArticle()" >등록</div>
                 
                         </div>
                         <hr>
@@ -194,7 +194,7 @@
 
                         <div>
                             <div style="width:100%; height:50px;"></div>
-                            <input style="width:100%; height:30px" placeholder="만날 장소 (상세하게 적어주세요)"></input>
+                            <input id='m_input_p' style="width:100%; height:30px" placeholder="만날 장소 (상세하게 적어주세요)"></input>
                             <div class="dropdown-row">
                                 <div style="width:100%; height:30px;">
                                     <div class="dropdown">
@@ -233,10 +233,15 @@
                                     </div>
                     
                                     <div>
-                                        <div id="editor" style="height: 400px;"></div>
+                                        <!-- <div id="editor" style="height: 400px;"></div> -->
+                                        <textarea id="editor" style="height: 400px;"></textarea>
                                         <script>
+                                            let theEditor;
                                             ClassicEditor
-                                                .create( document.querySelector( '#editor' ) )
+                                                .create( document.querySelector( '#editor' ))
+                                                .then(editor=>{
+                                                    theEditor=editor
+                                                })
                                                 .catch( error => {
                                                     console.error( error );
                                                 } );
@@ -277,6 +282,7 @@
         <script src="/static/js/walk.js"></script>
         <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>  
         <script src="./static/js/kakao.js"></script>
+        <script src="./static/js/api.js"></script>
 
 
         <script>
