fix 토너먼트 약간 수정

--- a/tournament.html
+++ b/tournament.html
@@ -71,7 +71,7 @@
                 <div class="event">
                     <img class="event_logo" src="/static/event_logo.png">
                     <div class="event_list">
-                        <div onclick="tournament_start(this,true)" class="event_title">
+                        <div onclick="event_start(1,true);" class="event_title">
                             댕댕이 웃긴짤 콘테스트!
                             <div style="font-size:12px; color: blue;">
                                 <i class="fa-solid fa-circle-info"></i> 재밌는 댕댕이 짤을 올려주세요! 박장대소 할수 있는 댕댕이가 필요해용^-^
