fix - search 기능 js 따로 분리. search.js, hashtag.css 를 html 파일들에 연결

--- a/mypage.html
+++ b/mypage.html
@@ -266,6 +266,7 @@
     <script src="./static/js/api.js"></script>
     <script src="./static/js/hashtag.js"></script>
     <script src="./static/js/mypage.js"></script>
+    <script src="./static/js/search.js"></script>
 </body>
 
 </html>
