--- a/neighbor-detail.html
+++ b/neighbor-detail.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/main_style.css">
     <link rel="stylesheet" href="/static/css/neighbor.css">
+    <link rel="stylesheet" href="/static/css/hashtag.css">
     <script src="https://kit.fontawesome.com/0e01622099.js" crossorigin="anonymous"></script>
     <title>neighbor</title>
 </head>
@@ -138,6 +139,8 @@
         <script src="/static/js/main_api.js"></script>
         <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>  
         <script src="./static/js/kakao.js"></script>
+        <script src="./static/js/search.js"></script>
+        <script src="/static/js/hashtag.js"></script>
         <script>
 
 
