--- a/search_result.html
+++ b/search_result.html
@@ -154,6 +154,7 @@
         <script src="/static/js/hashtag.js"></script>
         <script src="/static/js/search_result.js"></script>
         <script src="/static/js/main_script.js"></script>
-</body>
+        <script src="./static/js/search.js"></script>
+    </body>
 
 </html>
