--- a/dm.html
+++ b/dm.html
@@ -13,6 +13,7 @@
     <title>DirectMessage</title>
     <link rel="stylesheet" type="text/css" href="./static/css/login.css">
     <link rel="stylesheet" type="text/css" href="./static/css/dm.css">
+    <link rel="stylesheet" href="/static/css/hashtag.css">
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/0e01622099.js" crossorigin="anonymous"></script>
     <script src="https://use.fortawesome.com/99966411.js"></script>
@@ -82,7 +83,7 @@
     </div>
     </div>
 
-
+    <script src="./static/js/search.js"></script>
     <script src="./static/js/urls.js"></script>
     <script src="/static/js/dm.js"></script>
 
