--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
         <script src="/static/js/main_script.js"></script>
         <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>  
         <script src="./static/js/kakao.js"></script>
+        <script src="./static/js/search.js"></script>
 
 </body>
 
