--- a/neighbor.html
+++ b/neighbor.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/main_style.css">
     <link rel="stylesheet" href="/static/css/neighbor.css">
+    <link rel="stylesheet" href="/static/css/hashtag.css">
     <script src="https://kit.fontawesome.com/0e01622099.js" crossorigin="anonymous"></script>
     <script src="https://cdn.ckeditor.com/ckeditor5/34.2.0/classic/ckeditor.js"></script>
     <!-----텍스트에디터 ckeditor------>
@@ -319,7 +320,8 @@
         <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>  
         <script src="./static/js/kakao.js"></script>
         <script src="./static/js/neighbor.js"></script>
-
+        <script src="./static/js/search.js"></script>
+        <script src="/static/js/hashtag.js"></script>
         <script>
         </script>
 </body>
