--- a/tournament.html
+++ b/tournament.html
@@ -177,6 +177,7 @@
         <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
         <script src="./static/js/kakao.js"></script>
         <script src="./static/js/tournament.js"></script>
+        <script src="./static/js/search.js"></script>
 
 </body>
 
